--- a/ss4-angular-component-template/hackernews/src/app/like/like.component.html
+++ b/ss4-angular-component-template/hackernews/src/app/like/like.component.html
@@ -1,2 +1,1 @@
-<p>like works!</p>
-{{like}} likes. <button (click)="likeThis()">Like</button>
+{{like}} likes. <button (click)="likeThis()" class="btn btn-primary">Like</button>
