--- a/ss4-angular-component-template/hackernews/src/app/footer/footer.component.html
+++ b/ss4-angular-component-template/hackernews/src/app/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<div class="card w-75">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Button</a>
+  </div>
+</div>
+<hr>
+@CodeGym, 2021
