--- a/ss3-angular-overview/bai_tap/angular-calculator-app/src/app/calculator/calculator.component.html
+++ b/ss3-angular-overview/bai_tap/angular-calculator-app/src/app/calculator/calculator.component.html
@@ -16,7 +16,7 @@
       <button class="btn btn-primary btn-lg" style="width: 300px" (click)="calculator('*')">*</button>
     </div>
     <div class="col-md-3">
-      <button class="btn btn-primary btn-lg" style="width: 300px" (click)="calculator('/')">/</button>
+      <button class="btn btn-primary btn-lg" style="width: 300px" (click)="calculator('/')">&divide;</button>
     </div>
   </div>
 <h3>Your result : {{result}}</h3>
