--- a/ss7-service-router/timeline/src/app/app.component.html
+++ b/ss7-service-router/timeline/src/app/app.component.html
@@ -1,6 +1,14 @@
-<a routerLink="/timelines" >Link to ứng dụng tính thời gian sống</a> <br>
-<a routerLink="/playlist">Youtube</a> <br>
-<a routerLink="/dictionary">Dictionary Page</a> <br>
+<div class="row">
+  <div class="col-md-4 m-auto">
+    <a routerLink="/timelines">Link to ứng dụng tính thời gian sống</a> <br>
+    <a routerLink="/playlist">Youtube</a> <br>
+    <a routerLink="/dictionary">Dictionary Page</a> <br>
+  </div>
+  <div class="col-md-8">
+    <img src="https://www.nps.gov/mabi/learn/nature/images/MABI-landscape-pasture-forests-credit-K-McFarland-1000x100.jpg"
+         width="1000px" height="184px">
+  </div>
+</div>
 <a routerLink="/product/list" class="btn btn-outline-secondary">Danh sách sản phẩm</a>
 |<a routerLink="/product/create" class="btn btn-outline-success">Tạo sản phẩm</a>
 
