--- a/ss7-service-router/timeline/src/app/dictionary/dic-detail/dic-detail.component.html
+++ b/ss7-service-router/timeline/src/app/dictionary/dic-detail/dic-detail.component.html
@@ -1,5 +1,16 @@
-<h4 class="card-title">Dictionary Detail</h4>
-  <div>ID: {{wordDetail.id}}</div>
-  <div>Word: {{wordDetail.word}}</div>
-  <div>Meaning: {{wordDetail.meaning}}</div>
+<h3 class="card-title" style="padding-top: 30px">Dictionary Detail</h3>
+<div style="padding-left: 140px">
+  <div class="form-group">
+    <label>ID:</label>
+    <input type="text" name="" value="{{wordDetail.id}}" class="form-control w-25" readonly>
+  </div>
+  <div class="form-group">
+    <label>Word:</label>
+    <input type="text" name="" value="{{wordDetail.word}}" class="form-control w-25" readonly>
+  </div>
+  <div class="form-group">
+    <label>Meaning:</label>
+    <input type="text" name="" value="{{wordDetail.meaning}}" class="form-control w-25" readonly>
+  </div>
+</div>
 
