--- a/ss7-service-router/timeline/src/app/product/product-list/product-list.component.html
+++ b/ss7-service-router/timeline/src/app/product/product-list/product-list.component.html
@@ -6,11 +6,15 @@
   <th>Tên</th>
   <th>Giá</th>
   <th>Mô tả</th>
+  <th>Edit</th>
+  <th>Delete</th>
 </tr>
   <tr *ngFor=" let product of products ; index as i ">
   <td>{{i+1}}</td>
   <td>{{product.name}}</td>
   <td>{{product.price}}</td>
   <td>{{product.description}}</td>
+    <td><a [routerLink]="['/product/edit',product.id]" class="btn btn-outline-warning">Edit</a></td>
+    <td><a [routerLink]="['/product/delete',product.id]" class="btn btn-outline-danger">Delete</a></td>
   </tr>
 </table>
