--- a/ss7-service-router/timeline/src/app/app.component.html
+++ b/ss7-service-router/timeline/src/app/app.component.html
@@ -1,8 +1,10 @@
+<app-nav-bar></app-nav-bar>
 <div class="row">
   <div class="col-md-4 m-auto">
-    <a routerLink="/timelines">Link to ứng dụng tính thời gian sống</a> <br>
-    <a routerLink="/playlist">Youtube</a> <br>
-    <a routerLink="/dictionary">Dictionary Page</a> <br>
+    <h4>Other Excercise Practice</h4>
+    <a routerLink="/timelines" class="btn btn-light">Link to ứng dụng tính thời gian sống</a> <br>
+    <a routerLink="/playlist" class="btn btn-light">Youtube</a> <br>
+    <a routerLink="/dictionary" class="btn btn-light">Dictionary Page</a> <br>
   </div>
   <div class="col-md-8">
     <img src="https://www.nps.gov/mabi/learn/nature/images/MABI-landscape-pasture-forests-credit-K-McFarland-1000x100.jpg"
@@ -10,6 +12,5 @@
   </div>
 </div>
 <a routerLink="/product/list" class="btn btn-outline-secondary">Danh sách sản phẩm</a>
-|<a routerLink="/product/create" class="btn btn-outline-success">Tạo sản phẩm</a>
-
+ | <a routerLink="/category/list" class="btn btn-outline-primary">Danh sách loai sản phẩm</a>
 <router-outlet></router-outlet>
