--- a/ss7-service-router/timeline/src/app/product/product-list/product-list.component.html
+++ b/ss7-service-router/timeline/src/app/product/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <h1> Danh sách sản phẩm </h1>
-
+<a routerLink="/product/create" class="btn btn-outline-success">Tạo sản phẩm</a>
 <table class="table table-bordered table-hover" >
 <tr>
   <th>STT</th>
