--- a/ss7-service-router/timeline/src/app/category/category-delete/category-delete.component.html
+++ b/ss7-service-router/timeline/src/app/category/category-delete/category-delete.component.html
@@ -1,10 +1,10 @@
 <h1>Xoá danh mục sản phẩm</h1>
 <form [formGroup]="categoryForm" (ngSubmit)="deleteCategory(id)">
   <table>
-    <tr>
-      <td>Mã danh mục:</td>
-      <td><input type="number" formControlName="id" class="form-control"></td>
-    </tr>
+<!--    <tr>-->
+<!--      <td>Mã danh mục:</td>-->
+<!--      <td><input type="number" formControlName="id" class="form-control"></td>-->
+<!--    </tr>-->
     <tr>
       <td>Tên danh mục:</td>
       <td><input type="text" formControlName="name" class="form-control"></td>
