--- a/ss7-service-router/timeline/src/app/category/category-edit/category-edit.component.html
+++ b/ss7-service-router/timeline/src/app/category/category-edit/category-edit.component.html
@@ -1,10 +1,10 @@
 <h1>Cập nhật thông tin danh mục sản phẩm</h1>
-<form [formGroup] = "categoryForm" (ngSubmit)="updateCategory(id)">
+<form [formGroup]="categoryForm" (ngSubmit)="updateCategory(id)">
   <table>
-    <tr>
-      <td>Mã danh mục</td>
-      <td><input type ="number" formControlName="id" class="form-control"></td>
-    </tr>
+<!--    <tr>-->
+<!--      <td>Mã danh mục</td>-->
+<!--      <td><input type ="number" formControlName="id" class="form-control"></td>-->
+<!--    </tr>-->
     <tr>
       <td>Tên danh mục</td>
       <td><input type="text" formControlName="name" class="form-control"></td>
