17g23 26/12 --update a few of customer

--- a/hotel-project-casestudy/src/app/customer/customer.component.html
+++ b/hotel-project-casestudy/src/app/customer/customer.component.html
@@ -31,7 +31,7 @@
         <td [ngSwitch]="item.gender">
           <span *ngSwitchCase="0">Female</span>
           <span *ngSwitchCase="1">Male</span>
-          <span *ngSwitchCase="2">LGBT</span>
+          <span *ngSwitchCase="2"># gender</span>
         </td>
         <td>{{item.cccd}}</td>
         <td>{{item.phone}}</td>
