--- a/hotel-project-casestudy/src/app/customer/customer-create/customer-create.component.html
+++ b/hotel-project-casestudy/src/app/customer/customer-create/customer-create.component.html
@@ -1,1 +1,67 @@
-<p>customer-create works!</p>
+<!-- Modal -->
+<div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Create Customer</h5>
+      </div>
+
+      <div class="modal-body">
+        <form [formGroup]="customerFormCreate" (ngSubmit)="createCustomer()">
+          <div class="form-group">
+            <label>Mã Khách hàng: </label>
+            <input formControlName="code" type="text" class="form-control" required>
+               </div>
+
+          <div class="form-group">
+            <label>Name: </label>
+            <input formControlName="name" type="text" class="form-control" required>
+           </div>
+
+          <div class="form-group">
+            <label>DOB: </label>
+            <input formControlName="dob" type="date" class="form-control" required>
+            </div>
+
+          <div class="form-group">
+            <label>Gender: </label>
+            <input formControlName="gender" type="radio" value="0" class="form-group">Female
+            <input formControlName="gender" type="radio" value="1" class="form-group">male
+            <input formControlName="gender" type="radio" value="2" class="form-control">LGBT
+          </div>
+
+          <div class="form-group">
+            <label>CCCD: </label>
+            <input formControlName="cccd" type="text" class="form-control" required>
+              </div>
+
+          <div class="form-group">
+            <label>Phone: </label>
+            <input formControlName="phone" type="text" class="form-control" required>
+              </div>
+
+          <div class="form-group">
+            <label>Email: </label>
+            <input formControlName="email" type="text" class="form-control" required>
+          </div>
+
+          <div class="form-group">
+            <label>Type: </label>
+            <input formControlName="type" type="radio" value="diamond" class="form-group">Diamond
+            <input formControlName="type" type="radio" value="gold" class="form-group">Gold
+            <input formControlName="type" type="radio" value="silver" class="form-group">Silver
+          </div>
+
+          <div class="form-group">
+            <label>Address: </label>
+            <input formControlName="address" type="text" class="form-group" required>
+               </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-outline-success">Create</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
